--- a/gen2-spi/requirements.txt
+++ b/gen2-spi/requirements.txt
@@ -1,4 +1,4 @@
-opencv-python==4.5.1.48
+opencv-python
 --extra-index-url https://artifacts.luxonis.com/artifactory/luxonis-python-snapshot-local/
-depthai==0.0.2.1+e2ac7abe959aa439ecd05367104eabf57f2a9eee
+depthai==0.0.2.1+e299e2848feef62f9e37c86c005ada54f8c66113
 
